--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,6 +4,8 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+env:
+  DATABASE_URI: ${{ secrets.DATABASE_URI }}
 jobs:
   build:
     runs-on: ubuntu-latest
