--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,8 +4,6 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
-env:
-  DATABASE_URI: ${{ secrets.DATABASE_URI }}
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -20,6 +18,10 @@ jobs:
       - name: Run linters
         run: npm run lint
       - run: npm ci
+      - name: Create env file
+        run: |
+          touch .env
+          echo DATABASE_URI=${{ secrets.DATABASE_URI }} >> .env
       - run: npm run build --if-present
       - name: Initialize Google Cloud SDK
         uses: zxyle/publish-gae-action@master
