--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "build": "tsc -p tsconfig.build.json",
     "gcp-build": "npm run build",
     "format": "prettier --write \"src/**/*.ts\"",
-    "start": "node ./dist/main.js", 
+    "start": "node ./dist/main.js",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "graphdoc": "graphdoc -s ./src/schema.gql -o ./doc/schema"
   },
   "dependencies": {
     "@nestjs/common": "^7.6.15",
@@ -36,6 +37,7 @@
     "rxjs": "^6.6.6"
   },
   "devDependencies": {
+    "@2fd/graphdoc": "^2.4.0",
     "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/testing": "^7.6.15",
