Disable auto schema for prod

--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,5 @@
 runtime: nodejs14
 instance_class: F2
 env_variables:
-  DATABASE_URI: $DATABASE_URI
+  ENV=prod
+  DATABASE_URI: $DATABASE_URI_VALUE
