--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,6 +21,7 @@ jobs:
       - uses: ikuanyshbekov/app-yaml-env-compiler@v1.0
         env:
           DATABASE_URI: ${{ secrets.DATABASE_URI }}
+          ENV: prod
       - run: npm run build --if-present
       - name: Initialize Google Cloud SDK
         uses: zxyle/publish-gae-action@master
