--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,25 +9,25 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js 14
+      - name: Setup Node.js 14
         uses: actions/setup-node@v1
         with:
           node-version: 14
-      - name: Install Node.js dependencies
+      - name: Install dependencies
         run: npm install
       - name: Run linters
         run: npm run lint
       - run: npm ci
-      - name: Create env file
-        run: |
-          touch .env
-          echo DATABASE_URI=${{ secrets.DATABASE_URI }} >> .env
+      - name: Initialize app.yaml env variables
       - uses: ikuanyshbekov/app-yaml-env-compiler@v1.0
         env:
           DATABASE_URI: ${{ secrets.DATABASE_URI }}
           ENV: prod
-      - run: npm run build --if-present
+      - name: Build
+        run: npm run build --if-present
       - name: Run E2E tests
+        env:
+          DATABASE_URI: ${{ secrets.DATABASE_URI }}
         run: npm run test:e2e      
       - name: Initialize Google Cloud SDK
         uses: zxyle/publish-gae-action@master
@@ -35,7 +35,7 @@ jobs:
           service_account_email: ${{ secrets.GCP_SA_EMAIL }}
           service_account_key: ${{ secrets.GCLOUD_AUTH }}
           project_id: ${{ secrets.PROJECT_ID }}
-      - name: Publish app to Google App Engine
+      - name: Publish to Google App Engine
         run: |
           gcloud auth activate-service-account ${{ secrets.GCP_SA_EMAIL }} --key-file=client-secret.json
           gcloud config set project ${{ secrets.PROJECT_ID }}
