--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
     "@nestjs/graphql": "^7.10.6",
     "@nestjs/mongoose": "^7.2.4",
     "@nestjs/platform-express": "^7.6.15",
+    "@types/lodash": "^4.14.170",
     "apollo-server-express": "^2.25.1",
     "graphql": "^15.5.0",
     "graphql-tools": "^7.0.5",
+    "lodash": "^4.17.21",
     "mongoose": "^5.12.13",
+    "nestjs-dataloader": "^7.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6"
