--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/graphql": "^7.10.6",
     "@nestjs/mongoose": "^7.2.4",
     "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/serve-static": "^2.1.4",
     "@types/lodash": "^4.14.170",
     "apollo-server-express": "^2.25.1",
     "graphql": "^15.5.0",
